--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
   "description": "Личный проект «Седона» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
-    "autoprefixer": "^9.8.0",
+    "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
     "gulp-imagemin": "^7.1.0",
-    "gulp-less": "4.0.x",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^2.0.0",
+    "gulp-less": "4.0.x",
     "gulp-sourcemaps": "2.6.x",
     "gulp-svgstore": "^7.0.1",
     "gulp-webp": "^4.0.1",
     "imagemin-jpegtran": "^6.0.0",
-    "imagemin-svgo": "^7.1.0",
-    "posthtml-include": "^1.4.3",
-    "stylelint": "^13.5.0",
+    "imagemin-svgo": "^7.0.0",
+    "posthtml-include": "^1.3.3",
+    "stylelint": "10.1.x",
     "stylelint-config-htmlacademy": "^0.1.4"
   },
   "scripts": {
